<resources>
    <string name="app_name">Volunteera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="title">volunteera</string>

    <string-array name="data_photo">
        <item>https://www.indorelawan.org/uploads/gallery/2020-6-13/5f0bd6311fb97e514b249053_thumbnail370x250.jpg</item>
        <item>https://www.indorelawan.org/uploads/gallery/2020-6-8/5f05213ee535439621d8765e_thumbnail370x250.jpg</item>
        <item>https://www.indorelawan.org/uploads/gallery/2020-5-8/5eddaa8857927acf605df12d_thumbnail370x250.jpg</item>
        <item>https://www.indorelawan.org/uploads/gallery/2020-3-8/5e8d5b25c59bccf3b14e3ca9_thumbnail370x250.png</item>
        <item>https://www.indorelawan.org/uploads/gallery/2019-8-10/5d77569782e94fa0e15b68b8_thumbnail370x250.jpg</item>
    </string-array>

    <string-array name="data_interest">
        <item>@drawable/interest_art</item>
        <item>@drawable/interest_education</item>
        <item>@drawable/interest_help</item>
        <item>@drawable/interest_human</item>
        <item>@drawable/interest_parenting</item>
        <item>@drawable/interest_teaching</item>
        <item>@drawable/interest_technology</item>
    </string-array>

    <string-array name="judul_interest">
        <item>Art</item>
        <item>Education</item>
        <item>Help</item>
        <item>Human</item>
        <item>Parenting</item>
        <item>Teaching</item>
        <item>Technology</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="image">image for landing activity</string>
    <string name="next">next</string>
    <string name="nama">nama</string>
    <string name="author">Alief Ahmad Azies</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="image_url">image URL</string>
    <string name="official_website">official website</string>
    <string name="username">username</string>
    <string name="find_activity">find activity</string>
    <string name="search_activity">Search Activity</string>
</resources>

